--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,10 +1,72 @@
 ﻿@page "/"
+@using PizzaPlace.Shared
 
-<PageTitle>Index</PageTitle>
+<!-- Menu -->
+<h1>Our selection of pizzas</h1>
+@foreach (var pizza in Estados.Menu.Pizzas)
+{
+	<div class="row">
+		<div class="col">
+			@pizza.Nombre
+		</div>
+		<div class="col text-right">
+			@($"{pizza.Precio:0.00}")
+		</div>
+		<div class="col"></div>
+		<div class="col">
+			<img src="@SpicinessImage(pizza.picante)"
+				 alt="@pizza.picante" />
+		</div>
+		<div class="col">
+			<button class="btn btn-success pl-4 pr-4"
+				@onclick="@(() => AddToBasket(pizza))">
+				Add
+			</button>
+		</div>
+	</div>
+}
 
-<h1>Hello, world!</h1>
+<!-- End menu -->
+<!-- Shopping Basket -->
+@if (Estados.Cestas.Pedidos.Any())
+{
+	<h1 class="">Your current order</h1>
+	@foreach (var (pizza, pos) in Estados.Cestas.Pedidos.Select(
+					(id, pos) => (Estados.Menu.GetPizza(id), pos)))
+	{
+		<div class="row mb-2">
+			<div class="col">
+				@pizza.Nombre
+			</div>
+			<div class="col text-right">
+				@($"{pizza.Precio:0.00}")
+			</div>
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col">
+				<button class="btn btn-danger"
+				@onclick="@(() => RemoveFromBasket(pos))">
+					Remove
+				</button>
+			</div>
+		</div>
+	}
+	<div class="row">
+		<div class="col"></div>
+		<div class="col"><hr /></div>
+		<div class="col"> </div>
+		<div class="col"> </div>
+	</div>
 
-Welcome to your new app.
+	<div class="row">
+		<div class="col"> Total:</div>
+		<div class="col text-right font-weight-bold">
+			@($"{Estados.TotalPrice:0.00}") </ div >
+			<div class="col"> </div>
+			<div class="col"> </div>
+			<div class="col"> </div>
+		</div>
+}
 
 @code {
 	private Estados Estados { get; } = new Estados();
@@ -17,4 +79,12 @@ Welcome to your new app.
 
 		Estados.Menu.Add(new Pizza(3, "Diabolo", 9.99M, Picantes.Hot));
 	}
+	private string SpicinessImage(Picantes picante)
+	=> $"images/{picante.ToString().ToLower()}.png";
+
+	private void AddToBasket(Pizza pizza)
+	=> Estados.Cestas.Add(pizza.Id);
+
+	private void RemoveFromBasket(int pos)
+	=> Estados.Cestas.RemoveAt(pos);
 }
