--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -31,15 +31,16 @@
 @if (Estados.Cestas.Pedidos.Any())
 {
 	<h1 class="">Your current order</h1>
-	@foreach (var (pizza, pos) in Estados.Cestas.Pedidos.Select(
-					(id, pos) => (Estados.Menu.GetPizza(id), pos)))
+	@foreach (var (pizza, pos) in Estados.Cestas.Pedidos.Select((id, pos) => (Estados.Menu.GetPizza(id), pos)))
 	{
 		<div class="row mb-2">
 			<div class="col">
 				@pizza.Nombre
 			</div>
 			<div class="col text-right">
-				@($"{pizza.Precio:0.00}")
+				@(
+			$"{pizza.Precio:0.00}"
+			)
 			</div>
 			<div class="col"></div>
 			<div class="col"></div>
@@ -60,8 +61,7 @@
 
 	<div class="row">
 		<div class="col"> Total:</div>
-		<div class="col text-right font-weight-bold">
-			@($"{Estados.TotalPrice:0.00}") </ div >
+		<div class="col text-right font-weight-bold"> @($"{Estados.PrecioTotal:0.00}") </div>
 			<div class="col"> </div>
 			<div class="col"> </div>
 			<div class="col"> </div>
