--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -73,16 +73,16 @@
 
 	protected override void OnInitialized()
 	{
-		Estados.Menu.Add(new Pizza(1, "Pepperoni", 8.99M, Picantes.Spicy));
+		Estados.Menu.Add(new Pizzas(1, "Pepperoni", 8.99M, Picantes.Spicy));
 
-		Estados.Menu.Add(new Pizza(2, "Margarita", 7.99M, Picantes.None));
+		Estados.Menu.Add(new Pizzas(2, "Margarita", 7.99M, Picantes.None));
 
-		Estados.Menu.Add(new Pizza(3, "Diabolo", 9.99M, Picantes.Hot));
+		Estados.Menu.Add(new Pizzas(3, "Diabolo", 9.99M, Picantes.Hot));
 	}
 	private string SpicinessImage(Picantes picante)
 	=> $"images/{picante.ToString().ToLower()}.png";
 
-	private void AddToBasket(Pizza pizza)
+	private void AddToBasket(Pizzas pizza)
 	=> Estados.Cestas.Add(pizza.Id);
 
 	private void RemoveFromBasket(int pos)
